2012-01-09 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCCsalloc.hpp:
	  Fix broken (too greedy) coloring of bicliques.

2012-01-08 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCC.lex: included io.h for read() declaration with MSVC,
	  fixed linenr bug
	* src/SDCCerr.c: made W_LIT_OVERFLOW pedantic
	* src/SDCCglue.c (printIvalType, printIvalBitFields),
	* src/SDCCicode.c checkTypes): removed lessPedantic check
	* src/SDCCicode.c (geniCodeCast): fixed bug 3470368

2012-01-08 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCCtree_dec.hpp,
	  src/SDCCsalloc.hpp:
	  Fix use of elimination ordering in calculation of partial map p.

2012-01-06 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/gen.c:
	  Fixed width of lower part of large literals.

2012-01-06 Borut Razem <borut.razem AT gmail.com>

	* sdas/linksrc/Makefile.in: removed LKLIB
	* device/non-free/lib/Makefile.in: removed SOURCES

2012-01-07 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCCsalloc.hpp:
	  Fix handling of register parameters in stack allcoation.

2012-01-06 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/ralloc.c,
	  src/hc08/ralloc.c:
	  Preparations for enabling better stack handling for all ports.

2012-01-05 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCCralloc.hpp,
	  src/SDCCsalloc.hpp,
	  src/z80/ralloc2.cc,
	  src/z80/gen.c,
	  src/z80/gen.h,
	  src/hc08/ralloc.h,
	  src/hc08/ralloc.c,
	  src/hc08/ralloc2.cc,
	  src/SDCCglobl.h,
	  src/z80/z80.h,
	  src/z80/main.c,
	  src/SDCCmain.c,
	  src/SDCCmem.c:
	  Preparations for enabling better stack handling for all ports.

2012-01-04 Philipp Klaus Krause <pkk AT spth.de>

	* src/hc08/gen.c:
	  More explicit stack size reporting for hc08.

2012-01-04 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCglobl.h,
	  src/z80/z80.h,
	  src/z80/main.c,
	  src/z80/ralloc.c,
	  src/SDCCmain.c,