@@ -1,6 +1,11 @@
 2012-01-09 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
 
 	* src/SDCCsalloc.hpp:
+	  Add greedy recoloring post-processing.
+
+2012-01-09 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
+
+	* src/SDCCsalloc.hpp:
 	  Fix broken (too greedy) coloring of bicliques.
 
 2012-01-08 Maarten Brock <sourceforge.brock AT dse.nl>
